# MultipassTechnicalTest

./: CMakeLists.txt  README.md  main.cpp
